--- a/src/components/PhoneBook/Phonebook.module.css
+++ b/src/components/PhoneBook/Phonebook.module.css
@@ -2,9 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #000000;
-  color: #2c3e50; 
-  height: 100%;
+  background-image: url(../../img/fon.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  color: #91c4f3; 
 }
 
 .container {
@@ -18,14 +20,14 @@ h1 {
   margin-right: auto;
   font-size: 66px;
   font-style: italic;
-  color: #233744;
+  color: #c3ccd1;
 }
 
 h2 {
   margin-right: auto;
   font-style: italic;
   font-size: 48px;
-  color: #0f1b24;
+  color: #afbdc7;
 }
 
 form {
@@ -51,7 +53,7 @@ label {
   display: flex;
   flex-direction: column;
   font-size: 18px;
-  color: #ecf0f1;
+  color: #eef7fc;
 }
 
 input {
@@ -59,6 +61,7 @@ input {
   margin-bottom: 24px;
   font-size: 18px;
   border: 1px solid #3498db;
+  color: aqua;
   border-radius: 5px;
   transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
@@ -73,7 +76,7 @@ button {
   font-size: 18px;
   background: rgb(199,251,63);
   background: radial-gradient(circle, rgba(199,251,63,1) 0%, rgba(64,177,245,1) 100%);
-  color: #fff;
+  color: #030303;
   border: none;
   border-radius: 32px;
   cursor: pointer;
@@ -99,9 +102,7 @@ li {
   border-radius: 10px;
 }
 
-li:hover {
-  background-color: #ecf0f1;
-}
+
 
 li:last-child {
   border-bottom: none;
@@ -121,10 +122,14 @@ li:last-child {
   margin: auto;
   border-radius: 35px;
   text-align: center;
+  color: #181a1b;
 }
 .homecontainer{
     background-color: #18b960;
 }
 .hometext{
+  background-color: #18b960;
+}
+.Home{
   background-color: #18b960;
 }
