--- a/src/components/PhoneBook/Phonebook.module.css
+++ b/src/components/PhoneBook/Phonebook.module.css
@@ -100,6 +100,7 @@ li {
   gap: 30px;
   padding: 10px;
   border-radius: 10px;
+  color: #c3ccd1;
 }
 
 
@@ -118,7 +119,7 @@ li:last-child {
 .logaut{
   width: 300px;
   background: rgb(34,105,195);
-  background: linear-gradient(0deg, rgba(34,105,195,0.5) 0%, rgba(45,253,121,0.5) 100%);
+  background: linear-gradient(0deg, rgba(34,105,195,0.8) 0%, rgba(45,253,121,0.8) 100%);
   margin: auto;
   border-radius: 35px;
   text-align: center;
